# outreach-lint

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: good_t1.md  templated_batch.jsonl  user_config.example.toml
outreach_lint/: __init__.py  cli.py  config.py  default_config.toml  linter.py  llm.py  loader.py  models.py  textutil.py
outreach_lint/rules/: __init__.py  batch.py  followup.py  per_draft.py
tests/: conftest.py  test_anti_formula.py  test_banned_constructions.py  test_banned_in_opener_closer.py  test_cli.py  test_closer_round_robin.py  test_config.py  test_followup_advances.py  test_hedge_count.py  test_length_band.py  test_linter.py  test_llm.py  test_loader.py  test_opener_variety.py  test_personalization_present.py  test_reading_level.py  test_sequence_no_reuse.py  test_spam_phrases.py  test_t1_no_pitch.py  test_unfilled_tokens.py
