[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outreach-lint"
version = "0.1.0"
description = "Static analyzer for cold-email drafts: scores drafts against configurable outreach quality rules."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "VybeTech Labs" }]
keywords = ["cold-email", "outreach", "linter", "static-analysis", "sales"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
outreach-lint = "outreach_lint.cli:app"

[project.urls]
Homepage = "https://github.com/vybetechlabs-blip/outreach-lint"

[tool.hatch.build.targets.wheel]
packages = ["outreach_lint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=outreach_lint --cov-report=term-missing"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
